<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".Activity.ChatMainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:orientation="vertical" >
        <ListView
            android:id="@+id/list_conversation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:stackFromBottom="true"
            android:layout_weight="1"
            android:transcriptMode="alwaysScroll" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/textview_shape">
            <ImageButton
                android:id="@+id/btn_record"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:contentDescription="@string/record"
                android:src="@android:drawable/ic_btn_speak_now" />
            <EditText
                android:id="@+id/ed_enter_message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:textSize="16sp"
                android:background="@null"
                android:hint="@string/message_hint"
                android:inputType="textAutoCorrect|textMultiLine" />


            <ImageButton
                android:id="@+id/btn_photo_attach"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:contentDescription="@string/image_description"
                android:onClick="PhotoMessage"
                android:src="@android:drawable/ic_menu_gallery" />

            <ImageButton
                android:id="@+id/btn_photo_add"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:contentDescription="@string/image_description"
                android:onClick="CameraPhoto"
                android:src="@android:drawable/ic_menu_camera" />



        </LinearLayout>
        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_label_btn_send" />


    </LinearLayout>

</LinearLayout>