<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_margin="5dp"
    tools:context=".Activity.BluetoothChat">
    <ProgressBar
        android:id="@+id/progress_scan_devices"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:visibility="gone"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/neighborView"
        android:layout_weight="1"
        android:transcriptMode="alwaysScroll"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:text="@string/str_logger"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_height="wrap_content"/>
        <ListView
            android:id="@+id/list_conversation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stackFromBottom="true"
            android:layout_weight="1"
            android:transcriptMode="alwaysScroll" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/button_cancel"
                android:layout_width="65dp"
                android:visibility="visible"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:text="@string/str_label_btn_cancel" />
            <EditText
                android:id="@+id/ed_enter_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:text="@string/str_label_btn_send" />
            <Button
                android:id="@+id/button_transfer"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:text="Send" />
            <Button
                android:id="@+id/button_net_send"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:backgroundTint="@color/baby_orange"

                android:layout_height="wrap_content"
                android:text="Send" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>